RESOLVED FIXED141647
REGRESSION(r180050): It broke the !ENABLE(CSS_GRID_LAYOUT) build
https://bugs.webkit.org/show_bug.cgi?id=141647
Summary REGRESSION(r180050): It broke the !ENABLE(CSS_GRID_LAYOUT) build
Csaba Osztrogonác
Reported 2015-02-16 08:07:34 PST
error: ../../Source/WebCore/dom/Position.cpp: In member function 'bool WebCore::Position::isCandidate() const': ../../Source/WebCore/dom/Position.cpp:940:82: error: 'RenderGrid' was not declared in this scope
Attachments
Patch (2.12 KB, patch)
2015-02-16 11:15 PST, ChangSeok Oh
no flags
Patch (1.84 KB, patch)
2015-02-16 19:28 PST, ChangSeok Oh
ossy: review+
ossy: commit-queue-
Patch (1.84 KB, patch)
2015-02-17 00:32 PST, ChangSeok Oh
no flags
Patch (1.79 KB, patch)
2015-02-17 00:35 PST, ChangSeok Oh
no flags
ChangSeok Oh
Comment 1 2015-02-16 08:22:21 PST
Oops. Sorry for the inconvenience. If nobody is touching on this, let me fix it soon.
ChangSeok Oh
Comment 2 2015-02-16 11:15:19 PST
WebKit Commit Bot
Comment 3 2015-02-16 11:17:58 PST
Attachment 246664 [details] did not pass style-queue: ERROR: Source/WebCore/dom/Position.cpp:943: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Csaba Osztrogonác
Comment 4 2015-02-16 12:07:16 PST
Comment on attachment 246664 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=246664&action=review > Source/WebCore/dom/Position.cpp:56 > + No need to guard the include, RenderGrid.h is already guarded. > Source/WebCore/dom/Position.cpp:947 > - if (is<RenderBlockFlow>(*renderer) || is<RenderFlexibleBox>(*renderer) || is<RenderGrid>(*renderer)) { > + if (is<RenderBlockFlow>(*renderer) || is<RenderFlexibleBox>(*renderer) > +#if ENABLE(CSS_GRID_LAYOUT) > + || is<RenderGrid>(*renderer) > +#endif > + ) { Ouch, it is so bad looking. Maybe this one would be a little bit better, but still ugly: if (is<RenderBlockFlow>(*renderer) || #if ENABLE(CSS_GRID_LAYOUT) is<RenderGrid>(*renderer) || #endif is<RenderFlexibleBox>(*renderer)) { ...
ChangSeok Oh
Comment 5 2015-02-16 19:26:32 PST
Comment on attachment 246664 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=246664&action=review Thanks for your comments. =) >> Source/WebCore/dom/Position.cpp:56 >> + > > No need to guard the include, RenderGrid.h is already guarded. O.K Removed. >> Source/WebCore/dom/Position.cpp:947 >> + ) { > > Ouch, it is so bad looking. > > Maybe this one would be a little bit better, but still ugly: > > if (is<RenderBlockFlow>(*renderer) || > #if ENABLE(CSS_GRID_LAYOUT) > is<RenderGrid>(*renderer) || > #endif > is<RenderFlexibleBox>(*renderer)) { > ... Indeed. However a similar ugly look already exists. https://trac.webkit.org/browser/trunk/Source/WebCore/rendering/RenderBox.cpp#L2373 :P Let me update the patch as you noted.
ChangSeok Oh
Comment 6 2015-02-16 19:28:53 PST
Csaba Osztrogonác
Comment 7 2015-02-16 23:36:38 PST
Comment on attachment 246717 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=246717&action=review r=me > Source/WebCore/ChangeLog:10 > + * dom/Position.cpp: Add a build gard ENABLE(CSS_GRID_LAYOUT) for RenderGrid. typo: gard -> guard
ChangSeok Oh
Comment 8 2015-02-17 00:32:00 PST
ChangSeok Oh
Comment 9 2015-02-17 00:35:43 PST
WebKit Commit Bot
Comment 10 2015-02-17 01:42:24 PST
Comment on attachment 246735 [details] Patch Clearing flags on attachment: 246735 Committed r180213: <http://trac.webkit.org/changeset/180213>
Note You need to log in before you can comment on or make changes to this bug.