REGRESSION(r180050): It broke the !ENABLE(CSS_GRID_LAYOUT) build https://bugs.webkit.org/show_bug.cgi?id=141647

Reviewed by Csaba Osztrogonác.

No new tests since this just fixes a build break.

* dom/Position.cpp: Add a build guard ENABLE(CSS_GRID_LAYOUT) for RenderGrid.
(WebCore::Position::isCandidate):


Canonical link: https://commits.webkit.org/159720@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180213 268f45cc-cd09-0410-ab3c-d52691b4dbfc